-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 270203) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][-extraT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO)
  Z = revision       - small changes to major.minor version (optional)

  extraT             - beta, pre and rc releases that are in preparation
		       of major releases (optional)

-----------------------------------------------------------------------

??032003 (v2.2.2)  -** stable release **-
	- added: stream ogg/mp3/mid directly from network if the 
	         filename has a url-prefix
	- changed: ecasound.el updated to 0.8.2, lots of small
		   changes, see ecasound.el for details [mlang]
	- fixed: libecasound sample conversion unit test failed when 
		 compiled with gcc-2.91.66 on certain platforms
	- fixed: compile failed on systems that don't have nanosleep()
	- fixed: subtle bug in -kl and -kl2 (and possibly others) 
		 with fade lengths under 1s
15022003 (v2.2.1)  -** stable release **-
	- added: sane default param hints for chainops: -ec, -etd,
		 -ete, -etf, -etl, -etm, -etp, -etr and -epp
	- added: if configured with JACK-support, ecasound will
	  	 fetch the correct bufsize and srate parameters from 
		 the JACK server when connecting a chainsetup with 
	 	 JACK inputs or outputs
	- added: support for Erik de Castro Lopo's libsamplerate
		 resampling library; used both by the resample 
		 audio i/o object and the pitch shifter chainop (-ei);
	         enable with --with-libsamplerate
	- added: --disable-libsamplerate; don't enable libsamplerate
		 support even if the library is found during configure
	- added: resample-hq audio object type; like resample, but 
		 use the highest available resampling quality; 
		 currently only has an effect if libsamplerate 